--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.4",
     "typescript": "5.2.2"
   }
 }
